--- a/styles/base.scss
+++ b/styles/base.scss
@@ -23,21 +23,78 @@ body {
     justify-content: center;
     align-items: center;
     height: calc(100vh - 0px);
-    background: #274472;
     flex-wrap: wrap;
+
+    background: linear-gradient(270deg, #0003a1, #5900a1, #0099a1);
+    background-size: 600% 600%;
+
+    -webkit-animation: AnimationName 9s ease infinite;
+    -moz-animation: AnimationName 9s ease infinite;
+    -o-animation: AnimationName 9s ease infinite;
+    animation: AnimationName 9s ease infinite;
+
+    @-webkit-keyframes AnimationName {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+    @-moz-keyframes AnimationName {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+    @-o-keyframes AnimationName {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+    @keyframes AnimationName {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+
     .form {
         width: 500px;
         max-width: 90%;
         margin: auto;
-        background-color: #41729f;
+        background-color: #ffffff;
         padding: 2em;
         border-radius: 5px;
-        color: #fff;
-        // text-align: center;
+        color: #464646;
         header {
-            font-size: 2em;
+            font-size: 1.5em;
             font-family: "Roboto", sans-serif;
             font-weight: 300;
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
         }
 
         .input-form {
@@ -53,8 +110,7 @@ body {
 
             input {
                 width: 100%;
-                padding: 5px;
-                border: 0;
+                border: 1px solid #00000021;
                 border-radius: 5px;
                 padding: 10px;
             }
