--- a/styles/base.scss
+++ b/styles/base.scss
@@ -14,7 +14,7 @@ body {
     // background: #ffffff3d;
     // padding: 2em;
     padding: 0 0 20px;
-    color: #fff;
+    color: #000;
     text-align: center;
 }
 
